# pixelripper

./: .gitignore  README.md  pyproject.toml
docs/: index.html  pixelripper.html  search.js
docs/pixelripper/: pixelripper.html
src/pixelripper/: __init__.py  audio_extensions.txt  pixelripper.py  video_extensions.txt
tests/: test_pixelripper.py
